--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "dash-util",
+  "name": "gobyte-util",
   "version": "2.0.3",
-  "description": "Utility functions for Dash hashes and targets",
+  "description": "Utility functions for GoByte hashes and targets",
   "main": "index.js",
   "scripts": {
     "test": "standard && nyc tape test/*.js | faucet && nyc report",
     "test-browser": "./test/browser.sh"
   },
   "keywords": [
-    "dash",
+    "gobyte",
     "webcoin",
     "util",
     "utils",
@@ -33,10 +33,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/snogcel/dash-util.git"
+    "url": "git+https://github.com/gobytecoin/gobyte-util.git"
   },
   "bugs": {
-    "url": "https://github.com/snogcel/dash-util/issues"
+    "url": "https://github.com/gobytecoin/gobyte-util/issues"
   },
-  "homepage": "https://github.com/snogcel/dash-util#readme"
+  "homepage": "https://github.com/gobytecoin/gobyte-util#readme"
 }
